--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
