--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apidoc": "^0.53.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jsdoc": "^4.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
   },
