--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,9 @@
   },
   "production": {
     "username": "user_api_gyozilla_db",
-    "password": null,
+    "password": "wcE7ApGUFaFW7ajmDoLnBpVOQJg7G9rm",
     "database": "gyozilla_db",
-    "host": "127.0.0.1",
+    "host": "dpg-cf8fgi1gp3jqqerqcrlg-a:5432",
     "dialect": "postgres"
   }
 }
