--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.3.0",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "jsdoc": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.4",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0",
