--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "fs": "^0.0.1-security",
     "jsdoc": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
