--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx sequelize-cli db:migrate && node index.js"
+    "start": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && node index.js"
   },
   "author": "",
   "license": "ISC",
