Update GitHub Actions workflow

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,4 +19,4 @@ jobs:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
-        script: cd /path/to/your/repo && git pull origin Dev
+        script: cd /api_gyozilla && git pull origin Dev
