--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "prepush": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
