--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "prepush": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.3.0",
